Updated my-offers component to use signals for state management. Introduced offer service for handling API interactions related to offers. Added utility methods for offer validation and formatting. Implemented error handling for offer submissions and counter offers.